procps-ng-NEXT
---------------
  * watch: Dont remove 2 lines when using -t option        issue #413
procps-ng-4.0.6
---------------
  * library
    version: inc revision to 1 now 1:1:0
    internal: Use openat for files under /proc/<PID>
    internal: Don't check for sd_booted                    Debian #1108549
    internal: Address potential race leading to segfault   issues #380, #390
  * local: guard SIGPOLL for MacOS                         merge !246
  * pgrep: Fix unhex breakage for signal numbers           issue #369
  * pgrep: Match on process ID                             Debian #612146
  * pgrep: Add process_mrelease                            merge !250
  * pgrep: Add shell quoting                               merge !248
  * pgrep: Use pidfd_send_signal()                         issue #207
  * pgrep.1: Note that we can only go to 100th of second   issue #376
  * pgrep: Add --quiet option                              issue #404
  * pmap: add -k option to print raw names from kernel     merge !251
  * ps: parse --help correctly                             issue #381
  * ps: Add --delimiter option                             issue #118
  * ps: ps f forest works under pid 1                      issue #102
  * ps: no longer fails with many pids & the 'p' option    issue #387
  * ps.1: cols and collums alias width option              Debian #926361
  * ps.1: Add format equivalents                           Debian #925437
  * ps: avoid potential segfault due to library race       issue #380
  * ps: Fix -ad option conflict                            issue #395
  * ps: ppid of 0 is ok, fix parser                        issue #405
  * slabtop: Increase column width                         Debian #959375
  * sysctl: Return error if EPERM or EISDIR                merge !228
  * sysctl: Use options after --system                     Debian #978989
  * top: provides for ignoring configuration file(s)       issue #365