@@ -784,7 +784,7 @@ PROCPS_EXPORT int procps_slabinfo_new (
     /* do a priming read here for the following potential benefits: |
          1) see if that caller's permissions were sufficient (root) |
          2) make delta results potentially useful, even if 1st time |
-         3) elimnate need for history distortions 1st time 'switch' | */
+         3) eliminate need for history distortion 1st time 'switch' | */
     if (slabinfo_read_failed(p)) {
         procps_slabinfo_unref(&p);
         return -errno;
