@@ -52,7 +52,7 @@
 #define TYPE_P_CORE   2                // a TIC_TYPE_CORE, also # of threads
 
 /* ------------------------------------------------------------------------- +
-   this provision just does what its name sugggests - it will create several |
+   this provision just does what its name suggests -- it will create several |
    E-Core cpus for testing that STAT_TIC_ID_CORE & STAT_TIC_TYPE_CORE stuff! | */
 // #define PRETEND_E_CORES //----------------------------------------------- |
 // ------------------------------------------------------------------------- +
@@ -1139,7 +1139,7 @@ PROCPS_EXPORT int procps_stat_new (
     /* do a priming read here for the following potential benefits: |
          1) ensure there will be no problems with subsequent access |
          2) make delta results potentially useful, even if 1st time |
-         3) elimnate need for history distortions 1st time 'switch' | */
+         3) eliminate need for history distortion 1st time 'switch' | */
     if (stat_read_failed(p)) {
         procps_stat_unref(&p);
         return -errno;
