@@ -47,7 +47,7 @@ the beginning of the file.
 Open a file below
 .I /proc/##
 for writing even large buffers.  The optional delimiter character
-can be one of the follwoing
+can be one of the following
 .BR '\ ' ,\  ',' ,\  '.' ,\ and\  ':'
 where the default is the comma
 .BR ',' .
