@@ -176,7 +176,7 @@ is correctly allocated with at least \fIsize\fR bytes.
 .P
 .BR procps_capmask_names ()
 Fills \fIstr\fR with a human-readable text string of up to \fIsize\fR
-bytes of the capabilites set in the hexadecimal capability mask \fIcapmask\fR,
+bytes of the capabilities set in the hexadecimal capability mask \fIcapmask\fR,
 see
 .BR capabilities (7).
 If the list of capabilities exceeds \fIsize\fR bytes, the string will be truncated and
