@@ -703,7 +703,7 @@ For example:
 .B ps jax \-\-sort=\:uid,\:\-ppid,\:+pid
 .TP
 .B \-\-signames
-Show signal masks using abbreviated signal names and expands the collumn.
+Show signal masks using abbreviated signal names and expands the column.
 If the column width cannot show all signals,
 the column will end with a plus "\fI+\fR".
 Columns with only a hyphen have no signals.
@@ -1510,13 +1510,13 @@ if systemd support has been included.
 T}
 
 pcap	PCAP	T{
-Permitted Capabilites of the process, displayed as a hexadecimal bitmask.
+Permitted Capabilities of the process, displayed as a hexadecimal bitmask.
 See
 .IR capabilities (7).
 T}
 
 pcaps	PCAPS	T{
-Permitted Capabilites of the process, displayed as a string of capability
+Permitted Capabilities of the process, displayed as a string of capability
 names.  See
 .IR capabilities (7).
 T}
