@@ -2091,7 +2091,7 @@ like forest view or a sort on PID or a larger delay interval.
    \fB^G\fR\ \ :\fIDisplay-Control-Groups \fR       (Ctrl key + \[oq]g\[cq])
    \fB^K\fR\ \ :\fIDisplay-Cmdline \fR              (Ctrl key + \[oq]k\[cq])
    \fB^N\fR\ \ :\fIDisplay-Environment \fR          (Ctrl key + \[oq]n\[cq])
-   \fB^P\fR\ \ :\fIDisplay-Namesspaces \fR          (Ctrl key + \[oq]p\[cq])
+   \fB^P\fR\ \ :\fIDisplay-Namespaces \fR           (Ctrl key + \[oq]p\[cq])
    \fB^U\fR\ \ :\fIDisplay-Supplementary-Groups \fR (Ctrl key + \[oq]u\[cq])
 .fi
 
