@@ -26,8 +26,8 @@ This is the same information contained in the header line displayed by
 .BR w (1).
 .PP
 System load averages is the average number of processes that are either in a
-runnable or uninterruptable state.  A process in a runnable state is either
-using the CPU or waiting to use the CPU.  A process in uninterruptable state
+runnable or uninterruptible state.  A process in a runnable state is either
+using the CPU or waiting to use the CPU.  A process in uninterruptible state
 is waiting for some I/O access, eg waiting for disk.  The averages are taken
 over the three time intervals.  Load averages are not normalized for the
 number of CPUs in a system, so a load average of 1 means a single CPU system
