@@ -121,7 +121,7 @@ When using \fB\-\-terminal\fP option,
 .B w
 assumes processes with a parent PID of 0 or 1 are
 .BR agetty (8)
-processes and will not display them. This is prone to both false postive
+processes and will not display them. This is prone to both false positive
 and negative errors.
 .PP
 Idle time for users on certain sessions, such as X/Wayland sessions,
