@@ -51,7 +51,7 @@ the cause of \fIcommand\fR termination, the exit code will be 128 + \fBn\fR.
 .TP
 \fB\-f\fR, \fB\-\-follow\fR
 Instead of clearing the screen at each update, \fBwatch\fR will scroll the
-output similiar to how \fItail -f\fR works. This option is not compatible
+output similar to how \fItail -f\fR works. This option is not compatible
 with any option tracking the output of the screen, such as the
 \fB\-\-differences\fR, \fB\-\-chgexit\fR and \fB\-\-eqexit\fR options.
 .TP
